fixed selector on mobile view

--- a/components/GeneratePage/generatepage.module.scss
+++ b/components/GeneratePage/generatepage.module.scss
@@ -34,28 +34,23 @@
   }
 }
 
-.selector {
+.typeText {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
   position: relative;
   border: none;
   background-color: #ecf0f3;
   font-family: $default-font;
   font-weight: bold;
   font-size: 2rem;
-  
+  min-width: 175px;
   border-radius: 5px;
   box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
-    -2px -2px 12px rgba(255, 255, 255, 0.5),
-    inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-    2px 2px 8px rgba(0, 0, 0, .3);
-
-  &:hover {
-    cursor: pointer;
-  }
-
+  -2px -2px 12px rgba(255, 255, 255, 0.5),
+  inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+  2px 2px 8px rgba(0, 0, 0, .3);
+  
   &:focus {
     outline: none;
     opacity: 1;
@@ -65,7 +60,31 @@
     outline: 2px solid #ee4c4c;
   }
 
+  @include mobile {
+    padding: 10px 5px;
+    min-width: 120px;
+  }
+}
+
+.selector {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  position: relative;
+  border: none;
+  background-color: #ecf0f3;
+
   
+
+  &:focus {
+    outline: none;
+    opacity: 1;
+  }
+  
+  &:focus-visible {
+    outline: 2px solid #ee4c4c;
+  }
 }
 
 .selectText {
@@ -77,6 +96,11 @@
   width: 100%;
   min-width: 175px;
   padding: 19px 10px;
+  border-radius: 5px;
+  box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
+  -2px -2px 12px rgba(255, 255, 255, 0.5),
+  inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+  2px 2px 8px rgba(0, 0, 0, .3);
 
   &:focus {
     outline: none;
@@ -93,11 +117,6 @@
     padding: 10px 5px;
     min-width: 120px;
     max-height: 37px;
-    border-radius: 5px;
-    box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
-      -2px -2px 12px rgba(255, 255, 255, 0.5),
-      inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-      2px 2px 8px rgba(0, 0, 0, .3);
   }
 }
 
